--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <audio data-key="72" src="sounds/01 - JavaScript Drum Kit_sounds_ride.wav"></audio>
   <audio data-key="74" src="sounds/01 - JavaScript Drum Kit_sounds_snare.wav"></audio>
   <audio data-key="75" src="sounds/01 - JavaScript Drum Kit_sounds_tom.wav"></audio>
-  <audio data-key="76" src="sounds/01 - JavaScript Drum Kit_sounds_tink.wava"></audio>
+  <audio data-key="76" src="sounds/01 - JavaScript Drum Kit_sounds_tink.wav"></audio>
 
 </body>
 <script src="script.js"></script>
